--- a/Ch11-Ch12-Sequence-to-Sequence-Learning-with-TF2/12.1_seq2seq_machine_translation_part_2.ipynb
+++ b/Ch11-Ch12-Sequence-to-Sequence-Learning-with-TF2/12.1_seq2seq_machine_translation_part_2.ipynb
@@ -148,8 +148,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "df.shape = (227080, 2)\n",
-      "(clean) df.shape = (226553, 2)\n"
+      "df.shape = (242586, 2)\n",
+      "(clean) df.shape = (242018, 2)\n"
      ]
     }
    ],
@@ -279,27 +279,27 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>227073</th>\n",
-       "      <td>Death is something that we're often discourage...</td>\n",
-       "      <td>Wir werden oft davon abgehalten, über den Tod ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>227074</th>\n",
-       "      <td>At a moment when our economy is growing, our b...</td>\n",
-       "      <td>In einem Moment, in dem unsere Wirtschaft wäch...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>227075</th>\n",
+       "      <th>242577</th>\n",
        "      <td>Even if some sentences by non-native speakers ...</td>\n",
        "      <td>Auch wenn Sätze von Nichtmuttersprachlern mitu...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>227076</th>\n",
+       "      <th>242578</th>\n",
+       "      <td>Remember that the purpose of the Tatoeba Proje...</td>\n",
+       "      <td>Es gilt zu bedenken, dass es das Anliegen des ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>242579</th>\n",
+       "      <td>It's so easy to write good example sentences, ...</td>\n",
+       "      <td>Es ist so leicht, gute Beispielsätze zu schrei...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>242580</th>\n",
        "      <td>If someone who doesn't know your background sa...</td>\n",
        "      <td>Wenn jemand, der deine Herkunft nicht kennt, s...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>227077</th>\n",
+       "      <th>242581</th>\n",
        "      <td>If someone who doesn't know your background sa...</td>\n",
        "      <td>Wenn jemand Fremdes dir sagt, dass du dich wie...</td>\n",
        "    </tr>\n",
@@ -309,18 +309,18 @@
       ],
       "text/plain": [
        "                                                       EN  \\\n",
-       "227073  Death is something that we're often discourage...   \n",
-       "227074  At a moment when our economy is growing, our b...   \n",
-       "227075  Even if some sentences by non-native speakers ...   \n",
-       "227076  If someone who doesn't know your background sa...   \n",
-       "227077  If someone who doesn't know your background sa...   \n",
+       "242577  Even if some sentences by non-native speakers ...   \n",
+       "242578  Remember that the purpose of the Tatoeba Proje...   \n",
+       "242579  It's so easy to write good example sentences, ...   \n",
+       "242580  If someone who doesn't know your background sa...   \n",
+       "242581  If someone who doesn't know your background sa...   \n",
        "\n",
        "                                                       DE  \n",
-       "227073  Wir werden oft davon abgehalten, über den Tod ...  \n",
-       "227074  In einem Moment, in dem unsere Wirtschaft wäch...  \n",
-       "227075  Auch wenn Sätze von Nichtmuttersprachlern mitu...  \n",
-       "227076  Wenn jemand, der deine Herkunft nicht kennt, s...  \n",
-       "227077  Wenn jemand Fremdes dir sagt, dass du dich wie...  "
+       "242577  Auch wenn Sätze von Nichtmuttersprachlern mitu...  \n",
+       "242578  Es gilt zu bedenken, dass es das Anliegen des ...  \n",
+       "242579  Es ist so leicht, gute Beispielsätze zu schrei...  \n",
+       "242580  Wenn jemand, der deine Herkunft nicht kennt, s...  \n",
+       "242581  Wenn jemand Fremdes dir sagt, dass du dich wie...  "
       ]
      },
      "execution_count": 6,
@@ -435,35 +435,35 @@
      "text": [
       "English corpus\n",
       "==================================================\n",
-      "Tom    9516\n",
-      "to     8722\n",
-      "I      8407\n",
-      "the    6891\n",
-      "you    6077\n",
-      "a      5823\n",
-      "is     4322\n",
-      "in     2741\n",
-      "of     2536\n",
-      "was    2380\n",
+      "Tom    9562\n",
+      "to     8729\n",
+      "I      8427\n",
+      "the    6880\n",
+      "you    5947\n",
+      "a      5678\n",
+      "is     4362\n",
+      "in     2617\n",
+      "of     2508\n",
+      "was    2253\n",
       "dtype: int64\n",
       "\n",
-      "Vocabulary size (>=10 frequent): 2234\n",
+      "Vocabulary size (>=10 frequent): 2188\n",
       "\n",
       "German corpus\n",
       "==================================================\n",
       "sos      40000\n",
       "eos      40000\n",
-      "Tom      10046\n",
-      "Ich       7746\n",
-      "ist       4698\n",
-      "nicht     4550\n",
-      "zu        3589\n",
-      "Sie       3448\n",
-      "du        3074\n",
-      "das       2844\n",
+      "Tom      10038\n",
+      "Ich       7956\n",
+      "ist       4753\n",
+      "nicht     4690\n",
+      "zu        3594\n",
+      "Sie       3459\n",
+      "du        3017\n",
+      "das       2934\n",
       "dtype: int64\n",
       "\n",
-      "Vocabulary size (>=10 frequent): 2481\n"
+      "Vocabulary size (>=10 frequent): 2479\n"
      ]
     }
    ],
@@ -533,24 +533,24 @@
       "Some summary statistics\n",
       "Median length: 6.0\n",
       "\n",
-      "count    40000.00000\n",
-      "mean         6.34485\n",
-      "std          2.60440\n",
-      "min          1.00000\n",
-      "25%          5.00000\n",
-      "50%          6.00000\n",
-      "75%          8.00000\n",
-      "max         44.00000\n",
-      "Name: EN, dtype: float64\n",
-      "\n",
-      "Computing the statistics between the 1% and 99% quantiles (to ignore outliers)\n",
-      "count    39515.000000\n",
-      "mean         6.218272\n",
-      "std          2.317611\n",
-      "min          2.000000\n",
+      "count    40000.000000\n",
+      "mean         6.300925\n",
+      "std          2.570960\n",
+      "min          1.000000\n",
       "25%          5.000000\n",
       "50%          6.000000\n",
       "75%          8.000000\n",
+      "max         44.000000\n",
+      "Name: EN, dtype: float64\n",
+      "\n",
+      "Computing the statistics between the 1% and 99% quantiles (to ignore outliers)\n",
+      "count    39548.000000\n",
+      "mean         6.182942\n",
+      "std          2.301208\n",
+      "min          2.000000\n",
+      "25%          5.000000\n",
+      "50%          6.000000\n",
+      "75%          7.000000\n",
       "max         14.000000\n",
       "Name: EN, dtype: float64\n",
       "\n",
@@ -561,23 +561,23 @@
       "Median length: 8.0\n",
       "\n",
       "count    40000.000000\n",
-      "mean         8.374325\n",
-      "std          2.600928\n",
+      "mean         8.337050\n",
+      "std          2.562335\n",
       "min          3.000000\n",
       "25%          7.000000\n",
       "50%          8.000000\n",
       "75%         10.000000\n",
-      "max         46.000000\n",
+      "max         42.000000\n",
       "Name: DE, dtype: float64\n",
       "\n",
       "Computing the statistics between the 1% and 99% quantiles (to ignore outliers)\n",
-      "count    39173.000000\n",
-      "mean         8.282797\n",
-      "std          2.280142\n",
+      "count    39232.000000\n",
+      "mean         8.253161\n",
+      "std          2.260831\n",
       "min          5.000000\n",
       "25%          7.000000\n",
       "50%          8.000000\n",
-      "75%         10.000000\n",
+      "75%          9.000000\n",
       "max         16.000000\n",
       "Name: DE, dtype: float64\n"
      ]
@@ -629,8 +629,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EN vocabulary size: 2234\n",
-      "DE vocabulary size: 2481\n",
+      "EN vocabulary size: 2188\n",
+      "DE vocabulary size: 2479\n",
       "EN max sequence length: 19\n",
       "DE max sequence length: 21\n"
      ]
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,16 +737,13 @@
     "            assert isinstance(states, list) or isinstance(states, tuple), assert_msg\n",
     "            \n",
     "            encoder_full_seq = states[-1]\n",
-    "            W_a, U_a, V_a = states[-4], states[-3], states[-2]\n",
-    "            #_cell_fn = states[-5]\n",
-    "            #_cell_fn = states[-1]\n",
     "            \n",
     "            \"\"\" Computing S.Wa where S=[s0, s1, ..., si]\"\"\"\n",
     "            # <= batch size * en_seq_len * latent_dim\n",
-    "            W_a_dot_h = K.dot(encoder_full_seq, W_a)\n",
+    "            W_a_dot_h = K.dot(encoder_full_seq, self.W_a)\n",
     "\n",
     "            \"\"\" Computing hj.Ua \"\"\"                        \n",
-    "            U_a_dot_s = K.expand_dims(K.dot(states[0], U_a), 1)  # <= batch_size, 1, latent_dim\n",
+    "            U_a_dot_s = K.expand_dims(K.dot(states[0], self.U_a), 1)  # <= batch_size, 1, latent_dim\n",
     "                      \n",
     "            \"\"\" tanh(S.Wa + hj.Ua) \"\"\"\n",
     "            # <= batch_size*en_seq_len, latent_dim\n",
@@ -754,7 +751,7 @@
     "\n",
     "            \"\"\" softmax(va.tanh(S.Wa + hj.Ua)) \"\"\"\n",
     "            # <= batch_size, en_seq_len\n",
-    "            e_i = K.squeeze(K.dot(Wh_plus_Us, V_a), axis=-1)\n",
+    "            e_i = K.squeeze(K.dot(Wh_plus_Us, self.V_a), axis=-1)\n",
     "            # <= batch_size, en_seq_len\n",
     "            e_i = K.softmax(e_i)\n",
     "\n",
@@ -770,7 +767,7 @@
     "        \"\"\" Computing outputs \"\"\"\n",
     "        \n",
     "        last_out, attn_outputs, _ = K.rnn(\n",
-    "            _step, decoder_inputs, [initial_state], constants=[self.W_a, self.U_a, self.V_a, encoder_outputs]#, self._cell_fn]\n",
+    "            _step, decoder_inputs, [initial_state], constants=[encoder_outputs]\n",
     "        )\n",
     "\n",
     "        # attn_out => (batch_size, de_seq_len, de_hidden_size)\n",
@@ -800,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -945,13 +942,13 @@
       "                                                                                                  \n",
       " d_input (InputLayer)           [(None, 1)]          0           []                               \n",
       "                                                                                                  \n",
-      " encoder (Functional)           [(None, 128),        484352      ['e_input_final[0][0]']          \n",
+      " encoder (Functional)           [(None, 128),        478464      ['e_input_final[0][0]']          \n",
       "                                 (None, 128),                                                     \n",
       "                                 (None, 19, 256)]                                                 \n",
       "                                                                                                  \n",
       " d_vectorizer (Functional)      (None, 20)           0           ['d_input[0][0]']                \n",
       "                                                                                                  \n",
-      " d_embedding (Embedding)        (None, 20, 128)      317824      ['d_vectorizer[0][0]']           \n",
+      " d_embedding (Embedding)        (None, 20, 128)      317568      ['d_vectorizer[0][0]']           \n",
       "                                                                                                  \n",
       " concatenate (Concatenate)      (None, 256)          0           ['encoder[0][0]',                \n",
       "                                                                  'encoder[0][1]']                \n",
@@ -962,11 +959,11 @@
       "                                                                                                  \n",
       " d_dense_1 (Dense)              (None, 20, 512)      131584      ['d_attention[0][0]']            \n",
       "                                                                                                  \n",
-      " d_dense_final (Dense)          (None, 20, 2483)     1273779     ['d_dense_1[0][0]']              \n",
+      " d_dense_final (Dense)          (None, 20, 2481)     1272753     ['d_dense_1[0][0]']              \n",
       "                                                                                                  \n",
       "==================================================================================================\n",
-      "Total params: 2,963,251\n",
-      "Trainable params: 2,963,251\n",
+      "Total params: 2,956,081\n",
+      "Trainable params: 2,956,081\n",
       "Non-trainable params: 0\n",
       "__________________________________________________________________________________________________\n"
      ]
@@ -1820,7 +1817,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
